# fortuno

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.rst  config.cmake  fpm.toml  meson.build  meson.options  meson_options.txt
.github/workflows/: ci.yml
cmake/: FortunoConfig.cmake.in  FortunoHelpers.cmake  FortunoTestHelpers.cmake  fortuno-coarray.pc.in  fortuno-mpi.pc.in  fortuno-serial.pc.in  fortuno.pc.in  fortuno_coarray.pc.in  fortuno_mpi.pc.in  fortuno_serial.pc.in
devel/fpm-export/: fpm-export.sh
devel/fpm-export/mpi/: rsync.include
devel/fpm-export/serial/: rsync.include
devel/fpm-repo/: export-fpm-repo.sh
devel/fpm-repo/coarray/: repo.ignore  repo.include
devel/fpm-repo/coarray/addons/: README.rst  fpm.toml
devel/fpm-repo/coarray/addons/.github/workflows/: ci.yml
devel/fpm-repo/common/addons/: README.rst
devel/fpm-repo/mpi/: repo.ignore  repo.include
devel/fpm-repo/mpi/addons/: README.rst  fpm.toml
devel/fpm-repo/mpi/addons/.github/workflows/: ci.yml
devel/fpm-repo/serial/: repo.include
devel/fpm-repo/serial/addons/.github/workflows/: ci.yml
example/: CMakeLists.txt  README.rst  fixtured_module_tests.f90  fixtured_suite_tests.f90  fixtured_tests.f90  meson.build  mylib.f90  parametrized_tests.f90  simple_tests.f90  test_fixtured_suite.f90  testapp.f90
example/coarray/: CMakeLists.txt  meson.build  mylib.f90  test_simple.f90  testapp.f90
example/coarray-fpp/: CMakeLists.txt  meson.build  test_simple_fpp.F90  testapp.f90
example/coarray-fypp/: CMakeLists.txt  test_simple_fypp.fypp  testapp.f90
example/fypp/: CMakeLists.txt  fixtured_fypp_tests.fypp  mylib.f90  parametrized_fypp_tests.fypp  simple_fypp_tests.fypp  test_parametrized_fypp.fypp  testapp.f90  testapp_fypp.f90
example/mpi/: CMakeLists.txt  meson.build  test_simple.f90  testapp.f90
example/mpi-fpp/: CMakeLists.txt  meson.build  test_simple_fpp.F90  testapp.f90
example/mpi-fypp/: CMakeLists.txt  mylib.f90  test_simple_fypp.fypp  testapp.f90
example/serial/: CMakeLists.txt  meson.build  mylib.f90  test_fixtured.f90  test_fixtured_module.f90  test_fixtured_suite.f90  test_parametrized.f90  test_simple.f90  testapp.f90
example/serial-fpp/: CMakeLists.txt  meson.build  mylib.f90  test_fixtured_fpp.F90  test_fixtured_module_fpp.F90  test_fixtured_suite_fpp.F90  test_parametrized_fpp.F90  test_simple_fpp.F90  testapp.f90
example/serial-fypp/: CMakeLists.txt  mylib.f90  test_fixtured_fypp.fypp  test_parametrized_fypp.fypp  test_simple_fypp.fypp  testapp.f90
include/: CMakeLists.txt  fortuno.fypp  fortuno_coarray.fpp  fortuno_coarray.fypp  fortuno_mpi.fpp  fortuno_mpi.fypp  fortuno_serial.fpp  fortuno_serial.fypp
src/: CMakeLists.txt  fortuno.f90  fortuno_coarray.f90  fortuno_mpi.f90  fortuno_serial.f90  meson.build
src/fortuno/: CMakeLists.txt  argumentparser.f90  base.f90  basetypes.f90  chartypes.f90  checkers.f90  checkfuncs.f90  cmdapp.f90  consolelogger.f90  env.f90  meson.build  namedtypes.f90  serial.f90  testcmdapp.f90  testcontext.f90  testdriver.f90  testinfo.f90  testlogger.f90  utils.f90  version.f90
src/fortuno/base/: CMakeLists.txt  argumentparser.f90  basetypes.f90  checkers.f90  consolelogger.f90  meson.build  testcmdapp.f90  testcontext.f90  testdriver.f90  testinfo.f90  testlogger.f90  utils.f90  version.f90
src/fortuno/checkers/: CMakeLists.txt  helpers.f90  int32.f90  int64.f90  int_template.inc  meson.build  real32.f90  real64.f90  real_template.inc
src/fortuno/serial/: CMakeLists.txt  meson.build  serialbasetypes.f90  serialcase.f90  serialcmdapp.f90  serialconlogger.f90  serialcontext.f90  serialdriver.f90  serialglobalctx.f90  serialsuite.f90
src/fortuno_coarray/: CMakeLists.txt  coabasetypes.f90  coacmdapp.f90  coaconlogger.f90  coacontext.f90  coadriver.f90  coaenv.f90  coapurecase.f90  coapuresuite.f90  coatestinfo.f90  meson.build
src/fortuno_mpi/: CMakeLists.txt  meson.build  mpibasetypes.f90  mpicase.f90  mpicmdapp.f90  mpiconlogger.f90  mpicontext.f90  mpidriver.f90  mpienv.f90  mpiglobalctx.f90  mpisuite.f90  mpitestinfo.f90
src/fortuno_serial/: CMakeLists.txt  meson.build  serialbasetypes.f90  serialcase.f90  serialcmdapp.f90  serialconlogger.f90  serialcontext.f90  serialdriver.f90  serialglobalctx.f90  serialsuite.f90
test/: CMakeLists.txt
test/example/: CMakeLists.txt  coarray  coarray-fpp  coarray-fypp  mpi  mpi-fpp  mpi-fypp  serial  serial-fpp  serial-fypp
test/export/: CMakeLists.txt  fpm.toml  meson.build  meson_options.txt  testapp.f90
test/export/app/: CMakeLists.txt  meson.build  testapp.f90  testapp_fypp.fypp
test/export/coarray/: CMakeLists.txt  fpm.toml  meson.build  meson.options
test/export/coarray/app/: CMakeLists.txt  meson.build  testapp.f90  testapp_fpp.F90  testapp_fypp.fypp
test/export/mpi/: CMakeLists.txt  fpm.toml  meson.build
test/export/mpi/app/: CMakeLists.txt  testapp.f90  testapp_fpp.F90  testapp_fypp.fypp
test/export/serial/: CMakeLists.txt  fpm.toml  meson.build
test/export/serial/app/: CMakeLists.txt  meson.build  testapp.f90  testapp_fpp.F90
test/unit/: CMakeLists.txt  test_checkers.f90  testapp.f90
