# This file is part of Fortuno.
# Licensed under the BSD-2-Clause Plus Patent license.
# SPDX-License-Identifier: BSD-2-Clause-Patent

option('build_serial_interface', type: 'boolean', value: true, description: 'Build serial interface')

option('build_mpi_interface', type: 'boolean', value: false, description: 'Build MPI interface')

option('build_coarray_interface', type: 'boolean', value: false, description: 'Build coarray interface')

option('build_examples', type: 'boolean', value: false, description: 'Build examples')

option(
  'thread_safe_compile_flags', type: 'array', value: [],
  description: 'Fortran compiler arguments to use when compiling thread-safe sources'
)

option(
  'thread_safe_link_flags', type: 'array', value: [],
  description: 'Linker arguments to use when linking thread-safe sources'
)

option(
  'coarray_compile_flags', type: 'array', value: [],
  description: 'Fortran compiler arguments to use when compiling coarray sources'
)

option(
  'coarray_link_flags', type: 'array', value: [],
  description: 'Fortran linker arguments to use when linking coarray object files'
)
