# This file is part of Fortuno.
# Licensed under the BSD-2-Clause Plus Patent license.
# SPDX-License-Identifier: BSD-2-Clause-Patent

option('with_serial', type: 'boolean', value: true, description: 'Build serial interface')

option('with_mpi', type: 'boolean', value: false, description: 'Build MPI interface')

option('with_coarray', type: 'boolean', value: false, description: 'Build coarray interface')

option('with_examples', type: 'boolean', value: false, description: 'Build examples')

option(
  'fflags_threadsafe', type: 'array', value: [],
  description: 'Fortran compiler arguments to use when compiling thread-safe sources'
)

option(
  'ldflags_threadsafe', type: 'array', value: [],
  description: 'Linker arguments to use when linking thread-safe sources'
)

option(
  'fflags_coarray', type: 'array', value: [],
  description: 'Fortran compiler arguments to use when compiling coarray sources'
)

option(
  'ldflags_coarray', type: 'array', value: [],
  description: 'Fortran linker arguments to use when linking coarray object files'
)
