# This file is part of Fortuno.
# Licensed under the BSD-2-Clause Plus Patent license.
# SPDX-License-Identifier: BSD-2-Clause-Patent

if with_serial
  subdir('serial')
  subdir('serial-fpp')
endif

if with_mpi
  subdir('mpi')
  subdir('mpi-fpp')
endif

if with_coarray
  subdir('coarray')
  subdir('coarray-fpp')
endif
