# This file is part of Fortuno.
# Licensed under the BSD-2-Clause Plus Patent license.
# SPDX-License-Identifier: BSD-2-Clause-Patent

fortuno_sources += files(
  'fortuno.f90'
)
subdir('fortuno')

fortuno_serial_sources += files(
  'fortuno_serial.f90'
)
subdir('fortuno_serial')

fortuno_mpi_sources += files(
  'fortuno_mpi.f90'
)
subdir('fortuno_mpi')